# modular-ml

./: .gitignore  .pre-commit-config.yaml  .pre-commit-config.yml  .readthedocs.yaml  CONTRIBUTING.md  README.md  ROADMAP.md  noxfile.py  pyproject.toml  ruff.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: 01-bug_report.yml  02-feature_request.yml  config.yml
.github/workflows/: test_on_push.yml  update_roadmap.yml
docs/: conf.py  index.md  index.rst  requirements.txt
docs/_build/doctrees/: environment.pickle  index.doctree
docs/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_templates/: _autogen_api_template.rst
docs/api/: index.rst
docs/examples/: index.md
docs/explanation/: training_phases.md
docs/how_to/: 01_create_featureset.ipynb  02_create_modelnode.ipynb  03_create_modelgraph.ipynb  04_create_mergenode.ipynb  05_create_experiment.ipynb  06_create_scalers.ipynb  07_use_hardware_acceleration.ipynb  08_use_callbacks.ipynb  09_use_cross_validation.ipynb  index.rst
docs/how_to/utils/: hppc_data_gen.py  my_scaler.py
docs/source/api/: index.rst
docs/source/examples/: index.rst
docs/source/user_guide/: contributing.rst  index.rst  installation.rst  quickstart.rst
examples/: 01_featureset_basics.ipynb  02_modelgraph_basics.ipynb  03_training_and_evaluation.ipynb  README.md  walk_through.ipynb
modularml/: __init__.py  api.py  logger.py  predicates.py  registry.py
modularml/callbacks/: __init__.py  artifact_result.py
modularml/components/: activations.py  computation_node.py  graph_node.py  shape_spec.py
modularml/context/: execution_context.py  experiment_context.py  resolution_context.py
modularml/core/: __init__.py  api.py  settings.py
modularml/core/activation/: __init__.py  activation.py
modularml/core/data/: batch.py  batch_view.py  execution_context.py  featureset.py  featureset_view.py  registry.py  role_view.py  sample_collection.py  sample_collection_mixin.py  sample_data.py  sample_schema.py  sample_shapes.py  sampled_view.py  schema_constants.py
modularml/core/data_structures/: __init__.py  batch.py  data.py  feature_set.py  feature_subset.py  node_outputs.py  sample.py  sample_collection.py  step_result.py
modularml/core/experiment/: __init__.py  base_phase.py  eval_phase.py  experiment.py  experiment_context.py  experiment_node.py  phase_io.py  phase_result.py  phase_results.py  registry.py  training_phase.py
modularml/core/graph/: __init__.py  computation_node.py  feature_set.py  feature_subset.py  featureset.py  graph_node.py  merge_stage.py  mixins.py  model_graph.py  model_stage.py  (+1 more)
modularml/models/: __init__.py  base.py  sequential.py
modularml/preprocessing/: __init__.py  negate.py  per_sample_min_max.py  per_sample_zero.py  segmented_scaler.py
modularml/samplers/: __init__.py  n_sampler.py  paired_sampler.py  simple_sampler.py  triplet_sampler.py
modularml/scalers/: __init__.py  absolute.py  per_sample_zero.py
modularml/splitters/: __init__.py  condition_splitter.py  random_splitter.py
modularml/utils/: __init__.py  backend.py  comparators.py  data_conversion.py  data_format.py  environment.py  error_handling.py  exceptions.py  formatting.py  modeling.py  plotting.py  pyarrow_data.py  registries.py  serialization.py  shape_utils.py
modularml/visualization/: __init__.py  visualizer.py
tests/: conftest.py  testing.ipynb
tests/shared/: data_utils.py
tests/utils/: test_data_format.py
(+248 files in other folders)
